# apps/api/openapi.json
@@ -3,14 +3,23 @@
   "paths": {
     "/metrics": {
       "get": {
-        "operationId": "PrometheusController_index",
+        "operationId": "MetricsController_getMetrics",
         "parameters": [],
         "responses": {
           "200": {
-            "description": ""
+            "description": "",
+            "content": {
+              "application/json": {
+                "schema": {
+                  "type": "string"
+                }
+              }
+            }
           }
         },
-        "tags": ["Prometheus"]
+        "tags": [
+          "Metrics"
+        ]
       }
     },
     "/bookmarks": {
@@ -39,7 +48,9 @@
             }
           }
         },
-        "tags": ["Bookmarks"]
+        "tags": [
+          "Bookmarks"
+        ]
       },
       "get": {
         "operationId": "BookmarksController_findUserBookmarks",
@@ -95,7 +106,11 @@
             "in": "query",
             "schema": {
               "type": "string",
-              "enum": ["Most Recent", "Oldest First", "Alphabetical"]
+              "enum": [
+                "Most Recent",
+                "Oldest First",
+                "Alphabetical"
+              ]
             }
           },
           {
@@ -142,7 +157,9 @@
             }
           }
         },
-        "tags": ["Bookmarks"]
+        "tags": [
+          "Bookmarks"
+        ]
       }
     },
     "/bookmarks/{id}": {
@@ -170,7 +187,9 @@
             }
           }
         },
-        "tags": ["Bookmarks"]
+        "tags": [
+          "Bookmarks"
+        ]
       },
       "patch": {
         "operationId": "BookmarksController_updateBookmark",
@@ -206,7 +225,9 @@
             }
           }
         },
-        "tags": ["Bookmarks"]
+        "tags": [
+          "Bookmarks"
+        ]
       },
       "delete": {
         "operationId": "BookmarksController_deleteBookmark",
@@ -232,7 +253,9 @@
             }
           }
         },
-        "tags": ["Bookmarks"]
+        "tags": [
+          "Bookmarks"
+        ]
       }
     },
     "/bookmarks/{id}/restore": {
@@ -260,7 +283,9 @@
             }
           }
         },
-        "tags": ["Bookmarks"]
+        "tags": [
+          "Bookmarks"
+        ]
       }
     },
     "/folders": {
@@ -289,7 +314,9 @@
             }
           }
         },
-        "tags": ["Folders"]
+        "tags": [
+          "Folders"
+        ]
       },
       "get": {
         "operationId": "FoldersController_findUserFolders",
@@ -346,7 +373,9 @@
             }
           }
         },
-        "tags": ["Folders"]
+        "tags": [
+          "Folders"
+        ]
       }
     },
     "/folders/{id}": {
@@ -374,7 +403,9 @@
             }
           }
         },
-        "tags": ["Folders"]
+        "tags": [
+          "Folders"
+        ]
       },
       "patch": {
         "operationId": "FoldersController_updateFolder",
@@ -410,7 +441,9 @@
             }
           }
         },
-        "tags": ["Folders"]
+        "tags": [
+          "Folders"
+        ]
       },
       "delete": {
         "operationId": "FoldersController_deleteFolder",
@@ -436,7 +469,9 @@
             }
           }
         },
-        "tags": ["Folders"]
+        "tags": [
+          "Folders"
+        ]
       }
     },
     "/folders/{id}/restore": {
@@ -464,7 +499,9 @@
             }
           }
         },
-        "tags": ["Folders"]
+        "tags": [
+          "Folders"
+        ]
       }
     },
     "/tags": {
@@ -493,7 +530,9 @@
             }
           }
         },
-        "tags": ["Tags"]
+        "tags": [
+          "Tags"
+        ]
       },
       "get": {
         "operationId": "TagsController_findUserTags",
@@ -550,7 +589,9 @@
             }
           }
         },
-        "tags": ["Tags"]
+        "tags": [
+          "Tags"
+        ]
       }
     },
     "/tags/{id}": {
@@ -578,7 +619,9 @@
             }
           }
         },
-        "tags": ["Tags"]
+        "tags": [
+          "Tags"
+        ]
       },
       "patch": {
         "operationId": "TagsController_updateTag",
@@ -614,7 +657,9 @@
             }
           }
         },
-        "tags": ["Tags"]
+        "tags": [
+          "Tags"
+        ]
       },
       "delete": {
         "operationId": "TagsController_deleteTag",
@@ -640,7 +685,9 @@
             }
           }
         },
-        "tags": ["Tags"]
+        "tags": [
+          "Tags"
+        ]
       }
     },
     "/tags/{id}/restore": {
@@ -668,7 +715,9 @@
             }
           }
         },
-        "tags": ["Tags"]
+        "tags": [
+          "Tags"
+        ]
       }
     },
     "/metadata": {
@@ -697,7 +746,9 @@
             }
           }
         },
-        "tags": ["metadata"]
+        "tags": [
+          "metadata"
+        ]
       }
     }
   },
@@ -737,7 +788,10 @@
             }
           }
         },
-        "required": ["title", "url"]
+        "required": [
+          "title",
+          "url"
+        ]
       },
       "FolderDto": {
         "type": "object",
@@ -752,7 +806,10 @@
             "type": "string"
           }
         },
-        "required": ["id", "name"]
+        "required": [
+          "id",
+          "name"
+        ]
       },
       "TagDto": {
         "type": "object",
@@ -775,7 +832,13 @@
             "type": "string"
           }
         },
-        "required": ["id", "name", "userId", "createdAt", "updatedAt"]
+        "required": [
+          "id",
+          "name",
+          "userId",
+          "createdAt",
+          "updatedAt"
+        ]
       },
       "BookmarkDto": {
         "type": "object",
@@ -813,7 +876,14 @@
             "type": "string"
           }
         },
-        "required": ["id", "title", "url", "userId", "createdAt", "updatedAt"]
+        "required": [
+          "id",
+          "title",
+          "url",
+          "userId",
+          "createdAt",
+          "updatedAt"
+        ]
       },
       "PaginationMeta": {
         "type": "object",
@@ -858,7 +928,9 @@
             "maxLength": 500
           }
         },
-        "required": ["name"]
+        "required": [
+          "name"
+        ]
       },
       "UpdateFolderDto": {
         "type": "object",
@@ -881,7 +953,9 @@
             "maxLength": 100
           }
         },
-        "required": ["name"]
+        "required": [
+          "name"
+        ]
       },
       "UpdateTagDto": {
         "type": "object",
@@ -907,7 +981,11 @@
             "type": "string"
           }
         },
-        "required": ["title", "description", "url"]
+        "required": [
+          "title",
+          "description",
+          "url"
+        ]
       }
     }
   }
